# Minor_vidya

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  highscore.txt
res/: Bunker.tmx  Fields.tmx  Outskirts.tmx  Test.tmx  Test2.tmx  TestMap.tmx  placeholder  test3.tmx  tutorial.tmx
src/: Color.cpp  Color.hpp  DoubleCoordinate.hpp  Font.hpp  PointOfView.cpp  PointOfView.hpp  RayCastingTypes.hpp  Raycasting.cpp  Raycasting.hpp  RaycastingVector.hpp  SDLFacade.cpp  SDLFacade.hpp  SdlFacade.cpp  SdlFacade.hpp  TileObject.cpp  TileObject.hpp  Vector.hpp  WorldObject.cpp  WorldObject.hpp  config.hpp  main.cpp
src/engine/: AssetsManager.cpp  AssetsManager.hpp  Drawable.cpp  FPScounter.cpp  FPScounter.hpp  IDrawable.cpp  IDrawable.hpp  ImageTypes.hpp  KeyStrokes.hpp  PathUtil.cpp  PathUtil.hpp  SDLFacade.cpp  SDLFacade.hpp
src/engine/domain/: Color.cpp  Color.hpp  CoordinateDouble.cpp  CoordinateDouble.hpp  Entity.cpp  Entity.hpp  PointOfView.cpp  PointOfView.hpp  TileObject.cpp  TileObject.hpp  TileTrigger.cpp  TileTrigger.hpp  World.cpp  World.hpp  WorldObject.cpp  WorldObject.hpp
src/engine/exceptions/: AnimatedSpriteInvalidException.cpp  AnimatedSpriteInvalidException.hpp  InvalidImageException.cpp  InvalidImageException.hpp  InvalidSoundFileException.cpp  InvalidSoundFileException.hpp  InvalidWavFileException.cpp  InvalidWavFileException.hpp  SoundeffectNotLoadedException.cpp  SoundeffectNotLoadedException.hpp
src/engine/interface/: Collection.cpp  Collection.hpp  Drawable.cpp  Drawable.hpp  Handleable.hpp  Updatable.hpp
src/engine/raycasting/: AnimatedTexture.cpp  AnimatedTexture.hpp  RayCastingTypes.hpp  Raycasting.cpp  Raycasting.hpp
src/gamelogic/: Cheats.cpp  Cheats.hpp  ControlMapper.cpp  ControlMapper.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  HUD.cpp  HUD.hpp  HighscoreObject.cpp  HighscoreObject.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  RapidXMLAdapter.cpp  RapidXMLAdapter.hpp  Tile.cpp  Tile.hpp  TileTrigger.cpp  TileTrigger.hpp  VectorUtil.cpp  VectorUtil.hpp  Weapon.cpp  Weapon.hpp  WorldParser.cpp  WorldParser.hpp
src/gamelogic/RapidXML/: RapidXMLAdapter.cpp
src/gamelogic/State/: CreditState.cpp  CreditState.hpp  HelpState.cpp  HelpState.hpp  IGameState.cpp  IGameState.hpp  LoadState.cpp  LoadState.hpp  Menu.cpp  Menu.hpp  MenuOption.cpp  MenuOption.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp  RunState.cpp  RunState.hpp  StartUpState.cpp  StartUpState.hpp
src/gamelogic/campaign/: Campaign.cpp  Campaign.hpp  CampaignMap.cpp  CampaignMap.hpp
src/gamelogic/entities/: Enemy.cpp  Enemy.hpp  EnemyFactory.cpp  EnemyFactory.hpp  EntityFactory.cpp  EntityFactory.hpp  Soldier.cpp  Soldier.hpp
src/gamelogic/exceptions/: FileInvalidException.cpp  FileInvalidException.hpp  InvalidTextureException.cpp  InvalidTextureException.hpp  LevelIsNullptrException.cpp  LevelIsNullptrException.hpp  MapExceptions.cpp  MapExceptions.hpp  WeaponIsNullptrException.cpp  WeaponIsNullptrException.hpp
src/gamelogic/rapidXML/: RapidXMLAdapter.cpp  RapidXMLAdapter.hpp
src/gamelogic/state/: CreditState.cpp  CreditState.hpp  GameOverState.cpp  GameOverState.hpp  HelpState.cpp  HelpState.hpp  HighscoreState.cpp  HighscoreState.hpp  IGameState.cpp  IGameState.hpp  LevelSelectState.cpp  (+19 more)
src/util/: StringUtil.cpp  StringUtil.hpp  UnusedMacro.hpp
(+10 files in other folders)
